--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.SkinCache.CompileShaders=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
